cmake: Add ability to import Asterisk headers
- Add ability to import Asterisk headers from TAR package.
  Now AST_HEADER_DIR may point to directory with Asterisk headers
  or directory with TAR file. Only asterisk-headers.tar and
  asterisk-headers.tar.* archives are accepted.
  TAR files from source directory are imported BY DEFAULT.
- Add asterisk-headers.sh helper script which creates TAR
  witch Asterisk headers.
- Update Dockerfiles and tasks - tramsfering Asterisk headers archive.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,58 @@ FUNCTION(SetProjectVersion cmajor cminor cpatch ctweak cstatus)
     ENDIF()
 ENDFUNCTION()
 
+FUNCTION(ScanAsteriskHeadersDirectory VAR_PREFIX AST_DIR)
+    IF(NOT AST_DIR)
+        SET("${VAR_PREFIX}_RESULT" "EMPTY" PARENT SCOPE)
+        RETURN()
+    ENDIF()
+
+    IF(NOT IS_DIRECTORY ${AST_DIR})
+        SET("${VAR_PREFIX}_ERROR_MSG" "not a directory" PARENT_SCOPE)
+        SET("${VAR_PREFIX}_RESULT" PARENT_SCOPE)
+        RETURN()
+    ENDIF()
+
+    FILE(GLOB AST_LIST LIST_DIRECTORIES false RELATIVE ${AST_DIR} "${AST_DIR}/asterisk.h")
+    FILE(GLOB AST_LIST2 LIST_DIRECTORIES true RELATIVE ${AST_DIR} "${AST_DIR}/asterisk")
+    LIST(APPEND AST_LIST ${AST_LIST2})
+    LIST(LENGTH AST_LIST AST_LIST_LEN)
+    IF(${AST_LIST_LEN} EQUAL 2)
+        SET("${VAR_PREFIX}_RESULT" "DIRECTORY" PARENT_SCOPE)
+        CMAKE_PATH(NORMAL_PATH AST_DIR OUTPUT_VARIABLE FN_RES)
+        SET("${VAR_PREFIX}_DIRECTORY" "${FN_RES}" PARENT_SCOPE)
+        RETURN()
+    ELSEIF(${AST_LIST_LEN} EQUAL 1)
+        SET("${VAR_PREFIX}_ERROR_MSG" "incomplete headers" PARENT_SCOPE)
+        SET("${VAR_PREFIX}_RESULT" PARENT_SCOPE)
+        RETURN()
+    ENDIF()
+
+    FILE(GLOB AST_LIST LIST_DIRECTORIES false RELATIVE ${AST_DIR} "${AST_DIR}/asterisk-headers.tar")
+    FILE(GLOB AST_LIST2 LIST_DIRECTORIES false RELATIVE ${AST_DIR} "${AST_DIR}/asterisk-headers.tar.*")
+    LIST(APPEND AST_LIST ${AST_LIST2})
+    LIST(LENGTH AST_LIST AST_LIST_LEN)
+    IF(${AST_LIST_LEN} GREATER 1)
+        SET("${VAR_PREFIX}_ERROR_MSG" "too many archives - ${AST_LIST_LEN} found" PARENT_SCOPE)
+        SET("${VAR_PREFIX}_RESULT" PARENT SCOPE)
+        RETURN()
+    ELSEIF(${AST_LIST_LEN} EQUAL 1)
+        LIST(GET AST_LIST 0 ARCHIVE_FILE)
+        CMAKE_PATH(APPEND AST_DIR ${ARCHIVE_FILE} OUTPUT_VARIABLE FN_RES)
+        FILE(SIZE ${FN_RES} ARCHIVE_SIZE)
+        IF(${ARCHIVE_SIZE} LESS_EQUAL 1073741824)
+            SET("${VAR_PREFIX}_RESULT" "ARCHIVE" PARENT_SCOPE)
+            SET("${VAR_PREFIX}_ARCHIVE" "${FN_RES}" PARENT_SCOPE)
+        ELSE()
+            SET("${VAR_PREFIX}_ERROR_MSG" "too big archive file - ${ARCHIVE_FILE}" PARENT_SCOPE)
+            SET("${VAR_PREFIX}_RESULT" PARENT SCOPE)
+        ENDIF()
+        RETURN()
+    ENDIF()
+
+    SET("${VAR_PREFIX}_RESULT" "NONE" PARENT_SCOPE)
+ENDFUNCTION()
+
 FUNCTION(ShowAstBuildOptSum AST_HEADERS_SUBDIR)
     CMAKE_PATH(APPEND AST_HEADERS_SUBDIR "..")
     CMAKE_PATH(NORMAL_PATH AST_HEADERS_SUBDIR)
@@ -165,6 +217,7 @@ INCLUDE(CMakeDependentOption)
 OPTION(CHECK_SOURCE_DATE_EPOCH "Check existience of SOURCE_DATE_EPOCH environment variable" OFF)
 OPTION(BUILD_CHAN_QUECTEL_BINARY "Build chan_quectel binary" ON)
 OPTION(BUILD_OPENWRT_MAKEFILE "Build OpenWRT Makefile" OFF)
+SET(AST_HEADER_DIR CACHE PATH "Location of Asterisk headers")
 
 # BUILD_CHAN_QUECTEL_BINARY
 cmake_dependent_option(ICONV_CONST "iconv() const declaration of input buffer" OFF "BUILD_CHAN_QUECTEL_BINARY" OFF)
@@ -221,10 +274,35 @@ IF(BUILD_CHAN_QUECTEL_BINARY)
 
     ADD_LIBRARY(AsteriskModule INTERFACE)
     TARGET_COMPILE_DEFINITIONS(AsteriskModule INTERFACE "AST_MODULE_SELF_SYM=__internal_chan_quectel_self")
-    IF(DEFINED AST_HEADER_DIR)
-        MESSAGE(STATUS "Asterisk header directory: ${AST_HEADER_DIR}")
-        SET(CMAKE_REQUIRED_INCLUDES ${AST_HEADER_DIR})
-        TARGET_INCLUDE_DIRECTORIES(AsteriskModule BEFORE INTERFACE ${AST_HEADER_DIR})
+    IF(AST_HEADER_DIR)
+        ScanAsteriskHeadersDirectory(AST_SCAN ${AST_HEADER_DIR})
+        IF(NOT AST_SCAN_RESULT)
+            MESSAGE(FATAL_ERROR "Invalid value of AST_HEADER_DIR: ${AST_HEADER_DIR} - ${AST_SCAN_ERROR_MSG}")
+        ENDIF()
+        IF(${AST_SCAN_RESULT} STREQUAL "DIRECTORY")
+            MESSAGE(DEBUG "Asterisk header directory: ${AST_SCAN_DIRECTORY}")
+            SET(CMAKE_REQUIRED_INCLUDES ${AST_SCAN_DIRECTORY})
+            TARGET_INCLUDE_DIRECTORIES(AsteriskModule BEFORE INTERFACE ${AST_SCAN_DIRECTORY})
+        ELSEIF(${AST_SCAN_RESULT} STREQUAL "ARCHIVE")
+            MESSAGE(STATUS "Importing asterisk headers from ${AST_SCAN_ARCHIVE}")
+            FILE(ARCHIVE_EXTRACT INPUT "${AST_SCAN_ARCHIVE}" DESTINATION "${CMAKE_BINARY_DIR}/include")
+            SET(CMAKE_REQUIRED_INCLUDES "${CMAKE_BINARY_DIR}/include")
+            TARGET_INCLUDE_DIRECTORIES(AsteriskModule BEFORE INTERFACE "${CMAKE_BINARY_DIR}/include")
+        ELSEIF(${AST_SCAN_RESULT} STREQUAL "NONE")
+            MESSAGE(FATAL_ERROR "Invalid value of AST_HEADER_DIR: ${AST_HEADER_DIR} - could not find asterisk headers")
+        ENDIF()
+    ELSE()
+        ScanAsteriskHeadersDirectory(AST_SCAN ${CMAKE_SOURCE_DIR})
+        IF(NOT AST_SCAN_RESULT)
+            MESSAGE(WARNING "Looking for Asterisk headers archive: ${AST_SCAN_ERROR_MSG}")
+        ELSEIF(${AST_SCAN_RESULT} STREQUAL "ARCHIVE")
+            MESSAGE(STATUS "Importing asterisk headers from ${AST_SCAN_ARCHIVE}")
+            FILE(ARCHIVE_EXTRACT INPUT "${AST_SCAN_ARCHIVE}" DESTINATION "${CMAKE_BINARY_DIR}/include")
+            SET(CMAKE_REQUIRED_INCLUDES "${CMAKE_BINARY_DIR}/include")
+            TARGET_INCLUDE_DIRECTORIES(AsteriskModule BEFORE INTERFACE "${CMAKE_BINARY_DIR}/include")
+        ELSEIF(NOT ${AST_SCAN_RESULT} STREQUAL "NONE")
+            MESSAGE(WARNING "Looking for Asterisk headers archive: unexpected result - ${AST_SCAN_RESULT}")
+        ENDIF()
     ENDIF()
 
     CHECK_INCLUDE_FILE(asterisk.h HAVE_ASTERISK_H)
@@ -232,8 +310,8 @@ IF(BUILD_CHAN_QUECTEL_BINARY)
         MESSAGE(FATAL_ERROR "Asterisk header not found.")
     ENDIF()
 
-    IF(DEFINED AST_HEADER_DIR)
-        FIND_PATH(AST_HEADERS_SUBDIR NAMES buildopts.h PATHS ${AST_HEADER_DIR} PATH_SUFFIXES asterisk NO_CACHE NO_DEFAULT_PATH REQUIRED)
+    IF(DEFINED CMAKE_REQUIRED_INCLUDES)
+        FIND_PATH(AST_HEADERS_SUBDIR NAMES buildopts.h PATHS ${CMAKE_REQUIRED_INCLUDES} PATH_SUFFIXES asterisk NO_CACHE NO_DEFAULT_PATH NO_CMAKE_FIND_ROOT_PATH REQUIRED)
     ELSE()
         FIND_PATH(AST_HEADERS_SUBDIR NAMES buildopts.h PATH_SUFFIXES asterisk NO_CACHE REQUIRED)
     ENDIF()
