--- a/docker/builder/cc/Taskfile.dist.yaml
+++ b/docker/builder/cc/Taskfile.dist.yaml
@@ -42,6 +42,7 @@ tasks:
           --build-arg CC_TOOLCHAIN={{.CC_TOOLCHAIN}}
           {{if .CMAKE_VERBOSE}}--build-arg CMAKE_VERBOSE=1{{end}}
           {{if .ASTERISK_VERSION_NUM}}--build-arg ASTERISK_VERSION_NUM={{.ASTERISK_VERSION_NUM}}{{end}}
+          {{if .AST_HEADER_DIR}}--build-context asterisk-headers={{.AST_HEADER_DIR}}{{end}}
           {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "plain"}}--progress plain{{end}}
           -f ../../builder/cc/Dockerfile
           --iidfile {{.IID_FILE}}
@@ -65,6 +66,7 @@ tasks:
           --build-arg CC_TOOLCHAIN={{.CC_TOOLCHAIN}}
           {{if .CMAKE_VERBOSE}}--build-arg CMAKE_VERBOSE=1{{end}}
           {{if .ASTERISK_VERSION_NUM}}--build-arg ASTERISK_VERSION_NUM={{.ASTERISK_VERSION_NUM}}{{end}}
+          {{if .AST_HEADER_DIR}}--build-context asterisk-headers={{.AST_HEADER_DIR}}{{end}}
           {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "plain"}}--progress plain{{end}}
           -f ../../builder/cc/Dockerfile
           --iidfile {{.IID_FILE}}
