--- a/docker/builder/native/Dockerfile
+++ b/docker/builder/native/Dockerfile
@@ -8,6 +8,8 @@ ARG BASEIMG
 ARG BRANCH=master
 ARG PRESET
 
+FROM scratch AS asterisk-headers
+
 FROM ${BASEIMG} AS build-from-repo
 ARG BRANCH
 ARG ASTERISK_VERSION_NUM
@@ -17,7 +19,7 @@ ARG CMAKE_VERBOSE
 USER nobody:nogroup
 RUN task -d /build/task.d/chan-quectel clone
 RUN --network=none task -d /build/task.d/chan-quectel configure
-RUN --network=none task -d /build/task.d/chan-quectel build test
+RUN --network=none --mount=type=bind,from=asterisk-headers,target=/build/cache task -d /build/task.d/chan-quectel build test
 
 FROM ${BASEIMG} AS build-from-local
 ARG BRANCH
@@ -28,4 +30,4 @@ ARG CMAKE_VERBOSE
 COPY --from=chan-quectel-src --chown=nobody:nogroup / /build/chan-quectel
 USER nobody:nogroup
 RUN --network=none task -d /build/task.d/chan-quectel configure
-RUN --network=none task -d /build/task.d/chan-quectel build test
+RUN --network=none --mount=type=bind,from=asterisk-headers,target=/build/cache task -d /build/task.d/chan-quectel build test
