--- a/docker/builder/rpi/Dockerfile
+++ b/docker/builder/rpi/Dockerfile
@@ -9,6 +9,8 @@ ARG BRANCH=master
 ARG PRESET
 ARG RPI_VERSION=1
 
+FROM scratch AS asterisk-headers
+
 FROM ${BASEIMG} AS build-from-repo
 ARG BRANCH
 ARG ASTERISK_VERSION_NUM
@@ -21,7 +23,7 @@ ARG CMAKE_VERBOSE
 USER nobody:nogroup
 RUN task -d /build/task.d/chan-quectel clone
 RUN --network=none task -d /build/task.d/chan-quectel configure
-RUN --network=none task -d /build/task.d/chan-quectel build test
+RUN --network=none --mount=type=bind,from=asterisk-headers,target=/build/cache task -d /build/task.d/chan-quectel build test
 
 FROM ${BASEIMG} AS build-from-local
 ARG ASTERISK_VERSION_NUM
@@ -34,4 +36,4 @@ ARG CMAKE_VERBOSE
 COPY --from=chan-quectel-src --chown=nobody:nogroup / /build/chan-quectel
 USER nobody:nogroup
 RUN --network=none task -d /build/task.d/chan-quectel configure
-RUN --network=none task -d /build/task.d/chan-quectel build test
+RUN --network=none --mount=type=bind,from=asterisk-headers,target=/build/cache task -d /build/task.d/chan-quectel build test
