--- a/docker/task.d/rpi/Taskfile.dist.yaml
+++ b/docker/task.d/rpi/Taskfile.dist.yaml
@@ -4,7 +4,7 @@ output: prefixed
 
 vars:
   BUILD_DIR: /build
-  SYSROOT: '{{.BUILD_DIR}}/rpi'
+  SYSROOT: '{{.BUILD_DIR}}/sysroot'
   RPI_ROOT: '{{.BUILD_DIR}}/cache'
 
 tasks:
@@ -33,6 +33,15 @@ tasks:
         task: sysroot-lib
         vars:
           SYMLINK: '{{.ITEM}}'
+
+  asterisk-headers:
+    desc: Copy Asterisk header files
+    preconditions:
+      - test -d {{.RPI_ROOT}}
+    cmds:
+      - mkdir -p {{.BUILD_DIR}}/asterisk-headers
+      - cp {{.RPI_ROOT}}/usr/include/asterisk.h {{.BUILD_DIR}}/asterisk-headers
+      - cp -r {{.RPI_ROOT}}/usr/include/asterisk {{.BUILD_DIR}}/asterisk-headers
 
   sysroot:
     desc: Prepare Raspberry Pi SysRoot
