cmake: Improve tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,12 @@ FUNCTION(ShowAstBuildOptSum AST_HEADERS_SUBDIR)
     )
     IF(AST_BUILDOPT_SUM_COMPILE AND AST_BUILDOPT_SUM_RUN)
         STRING(STRIP ${AST_BUILDOPT_SUM_RAW} AST_BUILDOPT_SUM)
-        MESSAGE(STATUS  "AST_BUILDOPT_SUM=${AST_BUILDOPT_SUM}")
+        IF("${AST_BUILDOPT_SUM}" MATCHES "^[0123456789abcdef]+$")
+            SET(AST_BUILDOPT_SUM ${AST_BUILDOPT_SUM} PARENT_SCOPE)
+            MESSAGE(STATUS "AST_BUILDOPT_SUM=${AST_BUILDOPT_SUM}")
+        ELSE()
+            MESSAGE(FATAL_ERROR "Wrong AST_BUILDOPT_SUM: ${AST_BUILDOPT_SUM}")
+        ENDIF()
     ELSE()
         MESSAGE(FATAL_ERROR "Asterisk: Unknown value of AST_BUILDOPT_SUM")
     ENDIF()
