docker: Perform system upgrade
On Debian and Ubutnu perform `apt-get upgrade`.

--- a/docker/debian/10/Dockerfile
+++ b/docker/debian/10/Dockerfile
@@ -41,7 +41,7 @@ FROM task-base AS base
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build/task.d/deb install-pkgs -- file build-essential dpkg-dev ca-certificates jq libsqlite3-dev libssl1.1
+    task -d /build/task.d/deb upgrade-and-install-pkgs -- file build-essential dpkg-dev ca-certificates jq libsqlite3-dev libssl1.1
 RUN --network=none task -d /build create-build-directory && \
     task -d /build/task.d/deb create-dotenv && \
     task -d /build chown-build-directory -- nobody:nogroup
@@ -135,7 +135,8 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
 #!/bin/bash -e
 
 apt-get -qq update -y
-    apt-get -qq install -y --no-install-recommends libsqlite3-dev libasound2-dev
+apt-get -qq upgrade -y --no-install-recommends
+apt-get -qq install -y --no-install-recommends libsqlite3-dev libasound2-dev
 EOF
 
 FROM rpi-debian AS rpi-debian-asterisk-dev
