--- a/docker/rpi-debian/12/Dockerfile
+++ b/docker/rpi-debian/12/Dockerfile
@@ -18,7 +18,7 @@ COPY --from=task deb /build/task.d/deb
 FROM task-base AS base
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked -- \
-    task -d /build/task.d/deb install-pkgs -- file ca-certificates jq dpkg-dev libsqlite3-dev libssl3
+    task -d /build/task.d/deb upgrade-and-install-pkgs -- file ca-certificates jq dpkg-dev libsqlite3-dev libssl3
 RUN --network=none task -d /build create-build-directory && \
     task -d /build/task.d/deb create-dotenv && \
     task -d /build chown-build-directory -- nobody:nogroup
