--- a/docker/task.d/deb/Taskfile.dist.yaml
+++ b/docker/task.d/deb/Taskfile.dist.yaml
@@ -19,6 +19,16 @@ tasks:
       silent: true
     - apt-get -qq install -y --no-install-recommends {{.CLI_ARGS}}
 
+  upgrade-and-install-pkgs:
+    desc: Install specified packages (DEB)
+    env:
+      DEBIAN_FRONTEND: noninteractive
+    cmds:
+    - cmd: apt-get -qq update -y
+      silent: true
+    - apt-get -qq upgrade -y --no-install-recommends
+    - apt-get -qq install -y --no-install-recommends {{.CLI_ARGS}}
+
   install-pkgs-arch:
     desc: Adds architecture and install specified packages
     preconditions:
