ctest: Honor BUILD_TESTING option

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,7 +48,7 @@ INSTALL(
     COMPONENT chan-quectel
 )
 
-IF(IS_GIT_REPO)
+IF(IS_GIT_REPO AND BUILD_TESTING)
     IF(DEFINED CMAKE_READELF)
         ADD_TEST(NAME "Load library" COMMAND ${CMAKE_COMMAND}
             -DCMAKE_READELF=${CMAKE_READELF}
