docker: Fix rpi-debian builders
Fix Dockerfiles - install required taskfiles.

--- a/docker/rpi-debian/11/Dockerfile
+++ b/docker/rpi-debian/11/Dockerfile
@@ -54,5 +54,6 @@ FROM base as chan-quectel
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
     task -d /build/task.d/deb install-pkgs -- libasound2-dev asterisk-dev
+COPY --from=task chan-quectel /build/task.d/chan-quectel
 COPY --from=cmake --link --chown=root:root /build/install/ /
 COPY --from=ninja-build --link --chown=root:root /build/install /
