cmake: Improve clang-format finding and checking
- Move related functions to separate file.
- Move some Asterisk-related functions to separate file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,35 +4,6 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 
-FUNCTION(FindClangFormat OutVar)
-    UNSET(CLANG_FORMAT_EXE)
-
-    FILE(REAL_PATH "~" HOME_DIR EXPAND_TILDE)
-    CMAKE_PATH(APPEND HOME_DIR .vscode extensions OUTPUT_VARIABLE VSCODE_EXTENSIONS_DIR)
-    IF(EXISTS ${VSCODE_EXTENSIONS_DIR})
-        FILE(GLOB CPPTOOLS_DIR "${VSCODE_EXTENSIONS_DIR}/ms-vscode.cpptools*")
-        FOREACH(P ${CPPTOOLS_DIR})
-            CMAKE_PATH(APPEND P LLVM bin OUTPUT_VARIABLE VSE_BIN_DIR)
-            IF(NOT EXISTS ${VSE_BIN_DIR})
-                CONTINUE()
-            ENDIF()
-
-            FIND_PROGRAM(CLANG_FORMAT_EXE NAME clang-format HINTS ${VSE_BIN_DIR} NO_CACHE NO_DEFAULT_PATH)
-            IF(NOT ${CLANG_FORMAT_EXE} STREQUAL CLANG_FORMAT_EXE-NOTFOUND)
-                SET(${OutVar} ${CLANG_FORMAT_EXE} PARENT_SCOPE)
-                RETURN()
-            ENDIF()
-        ENDFOREACH()
-    ENDIF()
-
-    FIND_PROGRAM(CLANG_FORMAT_EXE NAME clang-format NO_CACHE)
-    IF(${CLANG_FORMAT_EXE} STREQUAL CLANG_FORMAT_EXE-NOTFOUND)
-        SET(${OutVar} ${CLANG_FORMAT_EXE} PARENT_SCOPE)
-    ELSE()
-        SET(${OutVar} ${OutVar}-NOTFOUND PARENT_SCOPE)
-    ENDIF()
-ENDFUNCTION()
-
 FUNCTION(SetProjectVersion cmajor cminor cpatch ctweak cstatus)
     MATH(EXPR MMAJOR "${cmajor}")
     MATH(EXPR MMINOR "${cminor}")
@@ -55,88 +26,15 @@ FUNCTION(SetProjectVersion cmajor cminor cpatch ctweak cstatus)
     ENDIF()
 ENDFUNCTION()
 
-FUNCTION(ScanAsteriskHeadersDirectory VAR_PREFIX AST_DIR)
-    IF(NOT AST_DIR)
-        SET("${VAR_PREFIX}_RESULT" "EMPTY" PARENT SCOPE)
-        RETURN()
-    ENDIF()
+INCLUDE(cmake/asterisk-headers.cmake)
 
-    IF(NOT IS_DIRECTORY ${AST_DIR})
-        SET("${VAR_PREFIX}_ERROR_MSG" "not a directory" PARENT_SCOPE)
-        SET("${VAR_PREFIX}_RESULT" PARENT_SCOPE)
-        RETURN()
-    ENDIF()
-
-    FILE(GLOB AST_LIST LIST_DIRECTORIES false RELATIVE ${AST_DIR} "${AST_DIR}/asterisk.h")
-    FILE(GLOB AST_LIST2 LIST_DIRECTORIES true RELATIVE ${AST_DIR} "${AST_DIR}/asterisk")
-    LIST(APPEND AST_LIST ${AST_LIST2})
-    LIST(LENGTH AST_LIST AST_LIST_LEN)
-    IF(${AST_LIST_LEN} EQUAL 2)
-        SET("${VAR_PREFIX}_RESULT" "DIRECTORY" PARENT_SCOPE)
-        CMAKE_PATH(NORMAL_PATH AST_DIR OUTPUT_VARIABLE FN_RES)
-        SET("${VAR_PREFIX}_DIRECTORY" "${FN_RES}" PARENT_SCOPE)
-        RETURN()
-    ELSEIF(${AST_LIST_LEN} EQUAL 1)
-        SET("${VAR_PREFIX}_ERROR_MSG" "incomplete headers" PARENT_SCOPE)
-        SET("${VAR_PREFIX}_RESULT" PARENT_SCOPE)
-        RETURN()
-    ENDIF()
-
-    FILE(GLOB AST_LIST LIST_DIRECTORIES false RELATIVE ${AST_DIR} "${AST_DIR}/asterisk-headers.tar")
-    FILE(GLOB AST_LIST2 LIST_DIRECTORIES false RELATIVE ${AST_DIR} "${AST_DIR}/asterisk-headers.tar.*")
-    LIST(APPEND AST_LIST ${AST_LIST2})
-    LIST(LENGTH AST_LIST AST_LIST_LEN)
-    IF(${AST_LIST_LEN} GREATER 1)
-        SET("${VAR_PREFIX}_ERROR_MSG" "too many archives - ${AST_LIST_LEN} found" PARENT_SCOPE)
-        SET("${VAR_PREFIX}_RESULT" PARENT SCOPE)
-        RETURN()
-    ELSEIF(${AST_LIST_LEN} EQUAL 1)
-        LIST(GET AST_LIST 0 ARCHIVE_FILE)
-        CMAKE_PATH(APPEND AST_DIR ${ARCHIVE_FILE} OUTPUT_VARIABLE FN_RES)
-        FILE(SIZE ${FN_RES} ARCHIVE_SIZE)
-        IF(${ARCHIVE_SIZE} LESS_EQUAL 1073741824)
-            SET("${VAR_PREFIX}_RESULT" "ARCHIVE" PARENT_SCOPE)
-            SET("${VAR_PREFIX}_ARCHIVE" "${FN_RES}" PARENT_SCOPE)
-        ELSE()
-            SET("${VAR_PREFIX}_ERROR_MSG" "too big archive file - ${ARCHIVE_FILE}" PARENT_SCOPE)
-            SET("${VAR_PREFIX}_RESULT" PARENT SCOPE)
-        ENDIF()
-        RETURN()
-    ENDIF()
-
-    SET("${VAR_PREFIX}_RESULT" "NONE" PARENT_SCOPE)
-ENDFUNCTION()
-
-FUNCTION(ShowAstBuildOptSum AST_HEADERS_SUBDIR)
-    CMAKE_PATH(APPEND AST_HEADERS_SUBDIR "..")
-    CMAKE_PATH(NORMAL_PATH AST_HEADERS_SUBDIR)
-    MESSAGE(STATUS "Asterisk header directory: ${AST_HEADERS_SUBDIR}")    
-    TRY_RUN(AST_BUILDOPT_SUM_RUN AST_BUILDOPT_SUM_COMPILE ${CMAKE_BINARY_DIR}/AST_BUILDOPT_SUM
-        SOURCES ${CMAKE_SOURCE_DIR}/test/asterisk/AST_BUILDOPT_SUM.c
-        COMPILE_DEFINITIONS "-I${AST_HEADERS_SUBDIR}"
-        RUN_OUTPUT_VARIABLE AST_BUILDOPT_SUM_RAW
-    )
-    IF(AST_BUILDOPT_SUM_COMPILE AND AST_BUILDOPT_SUM_RUN)
-        STRING(STRIP ${AST_BUILDOPT_SUM_RAW} AST_BUILDOPT_SUM)
-        IF("${AST_BUILDOPT_SUM}" MATCHES "^[0123456789abcdef]+$")
-            SET(AST_BUILDOPT_SUM ${AST_BUILDOPT_SUM} PARENT_SCOPE)
-            MESSAGE(STATUS "AST_BUILDOPT_SUM=${AST_BUILDOPT_SUM}")
-        ELSE()
-            MESSAGE(FATAL_ERROR "Wrong AST_BUILDOPT_SUM: ${AST_BUILDOPT_SUM}")
-        ENDIF()
-    ELSE()
-        MESSAGE(FATAL_ERROR "Asterisk: Unknown value of AST_BUILDOPT_SUM")
-    ENDIF()
-ENDFUNCTION()
-
+#
+# clang-format executable
+# expected version: 18
+#
+INCLUDE(cmake/clang-format.cmake)
 SET(CLANG_FORMAT CLANG_FORMAT-NOTFOUND CACHE FILEPATH "C/C++/Java/JavaScript/JSON/Objective-C/Protobuf/C# code formatter")
-IF(NOT CLANG_FORMAT OR "${CLANG_FORMAT}" STREQUAL CLANG_FORMAT-NOTFOUND)
-    UNSET(CLANG_FORMAT_PATH)
-    FindClangFormat(CLANG_FORMAT_PATH)
-    MESSAGE(STATUS "clang-format: ${CLANG_FORMAT_PATH}")
-    SET(CLANG_FORMAT ${CLANG_FORMAT_PATH} CACHE FILEPATH "C/C++/Java/JavaScript/JSON/Objective-C/Protobuf/C# code formatter" FORCE)
-    UNSET(CLANG_FORMAT_PATH)
-ENDIF()
+ClangFormatFindAndCheck(18)
 
 #
 #
